content.css
.dropdown{
    margin-left: 30px;
    height: 32px;
    width: 28px;
}

.dropdown img{
    height: 140%;
    width: 100%;
}

#x-ai-dropdown img{

    height: 10%;
    width: 10%;
    
}

.popup{
    position: fixed;
    top: 0;
    left: 50vw;
    z-index: 1;
}

.popup-content{
    margin: 100px auto;
    background: #90ffe7;
    color: black;
    position: relative;
}

.popup-header{
    padding: 10px;
    text-align: center;
    font-size: 20px;
    font-weight: bold;
}

.popup-header button{
    position: absolute;
    top: 0;
    right: 0;
    cursor: pointer;
    background: none;
    border: none;
    font-size: 20px;
    font-weight: bold;
}

.popup-body{
    padding: 10px 10px 30px;
    text-align: center;
    font-size: 20px;
}

